2007-08-19  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: also use _vala_array_free to
	release string arrays as g_strfreev cannot handle Vala's sized
	arrays, which have a _length variable, but no NULL sentinel.
	* gobject/valacodegeneratorsourcefile.vala: enhance _vala_array_free
	to handle unsized (NULL sentinel terminated) arrays.
	* tests/test-022.*: test behaviour of _vala_array_free. currently
	fails because Vala forgets to release old element members when 
	assigning a new value.

2007-08-19  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegeneratorsourcefile.vala: move code generation
	for _vala_array_free and _vala_array_move into separate methods
	for readability.

2007-08-18  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegenerator.vala: terminate array initializer
	with NULL sentinal to make destructors like g_strfreev happy

2007-08-18  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/Makefile.am: erm, well.. also should install enchant.vala

2007-08-18  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* configure.ac: test for libenchant
	* vapi/enchant.vala: introducing some echant bindings
	* tests/Makefile.am, tests/testenchant.vala: test enchant bindings

2007-08-17  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/libglade-2.0.vala: revert last change: the field
	really is called "signal" name as figured out by gidlgen -
	for almost five years now

2007-08-17  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/libglade-2.0.vala: use correct name for
	signal_name, patch by Francisco Camenforte Torres

2007-08-17  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/gtk+-2.0.vala: apply changes in the output
	of vapigen caused by the sentinel attribute patch

2007-08-16  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* gobject/valacodegeneratorinvocationexpression.vala,
	vala/valainterfacewriter.vala, vala/valamethod.vala,